Bug 438914 - Crash caused by cancelling duplication of gamut mask
Summary: Crash caused by cancelling duplication of gamut mask
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-19 13:56 UTC by carinatoocool
Modified: 2021-08-03 10:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash Log (53.60 KB, text/plain)
2021-06-19 13:56 UTC, carinatoocool
Details

Note You need to log in before you can comment on or make changes to this bug.
Description carinatoocool 2021-06-19 13:56:22 UTC
Created attachment 139516 [details]
Crash Log

SUMMARY

When duplicating mask, crash may sometimes happen after cancelling its creation. 
STEPS TO REPRODUCE
1. Duplicate a mask
2. Name the mask and confirm
3. Cancel the mask from the mask editor

OBSERVED RESULT
Krita crash

EXPECTED RESULT
The mask creation is cancelled.

SOFTWARE/OS VERSIONS
Krita version:  5.0.0-prealpha (git c4e3b84)
                Languages: en_GB, en, en_US, en
                Hidpi: true

Qt:
Version (compiled): 5.12.9
Version (loaded): 5.12.9

Windows: Windows 10 Pro

Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION\

Most of the time no crash happens, however there was crash log created as it crashes twice beforehand.
Comment 1 Dmitry Kazakov 2021-07-30 12:00:33 UTC
Git commit 1b23ef4ede84f0fc3717fca85fcaa92c2ccd39e4 by Dmitry Kazakov.
Committed on 30/07/2021 at 11:59.
Pushed by dkazakov into branch 'master'.

Fix crash when closing a gamut mask document

We shouldn't access m_view after its deletion has been requested
via deleteLater(). It make cause a crash.

M  +11   -10   plugins/dockers/gamutmask/gamutmask_dock.cpp

https://invent.kde.org/graphics/krita/commit/1b23ef4ede84f0fc3717fca85fcaa92c2ccd39e4
Comment 2 Dmitry Kazakov 2021-08-03 10:08:59 UTC
Git commit 5d1906670759f5e04a88f569e0819347d0dfac3b by Dmitry Kazakov.
Committed on 03/08/2021 at 08:36.
Pushed by dkazakov into branch 'krita/4.3'.

Fix crash when closing a gamut mask document

We shouldn't access m_view after its deletion has been requested
via deleteLater(). It make cause a crash.

M  +11   -10   plugins/dockers/gamutmask/gamutmask_dock.cpp

https://invent.kde.org/graphics/krita/commit/5d1906670759f5e04a88f569e0819347d0dfac3b