Fix crash when closing a gamut mask document

We shouldn't access m_view after its deletion has been requested
via deleteLater(). It make cause a crash.

BUG:438914